dark mode mobile fix

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -656,7 +656,7 @@ body{
 
 h1{
   font-family: "Arial Black", Gadget, sans-serif;
-  color: rgb(204, 203, 203) !important;
+  color: rgb(226, 226, 226) !important;
   text-shadow: hsla(0, 0%, 21%, 0.8) !important;
 }
 h3{
@@ -669,17 +669,17 @@ p{
   padding: 30px;
 }
 textarea{
-  position: fixed;
+  position: block;
   resize: none;
   border-style: solid;
   border-width: 4px;
   border-radius: 10px;
   border-color: rgb(121, 121, 121);
   background-color: rgb(121, 121, 121);
-  width: 716px;
-  top: 208px;
-  transform: translateX(-50%);
-  left: 50%;
+  text-align: center;
+  width: 50%;
+  margin-top: 200px;
+  margin-bottom: 0;
   height: 110px;
   color: rgb(58, 58, 58);
   text-indent: 10px;
@@ -688,30 +688,29 @@ textarea{
 }
 .title_container{
   width: 100%;
-  position: fixed;
+  height: 0px;
+  position: block;
+  margin: none;
   
   
 }
 .SiteTitle{
-    position:  fixed;
-    margin: 0;
+    position:  block !important;
+    margin-top:  10px;
+    margin-bottom: 0px !important;
     align-content: center;
-    transform: translateX(-50%);
-    left: 50%;
-    top: 30px;
-    font-size: 90px;
-    color: rgb(54, 54, 54);
+    text-align: center !important;
+    font-size: 90px ;
+  
     
 }
 .SiteSubTitle{
-  position: fixed;
-  transform: translateX(-50%);
-  left: 50%;
-
+  position: block;
+  margin-top: -20px;
   text-align: center !important;
   font-size: 26px;
-  top: 110px;
-  color: rgb(251, 242, 224);
+
+  color: rgb(255, 255, 255);
 }
 footer{
   position: relative;
@@ -803,7 +802,8 @@ textarea:focus::placeholder{
 
   }
   textarea{
-    top: 80px !important;
+    margin-top: 100px;
+    height: 40px;
     
   }
   .textarea-border{
@@ -815,7 +815,7 @@ textarea:focus::placeholder{
 }
   h1{
     font-size: 40px !important;
-    top: 10px !important;
+    
   }
   .SiteSubTitle{
 
@@ -826,7 +826,7 @@ textarea:focus::placeholder{
     top: 22px;
   }
   .card_wrapper{
-    margin-top: 300px !important;
+    margin-top: 60px !important;
   }
 
 }
@@ -846,7 +846,7 @@ textarea:focus::placeholder{
   .card_wrapper{
     display: flex;
     justify-content: space-around;
-    margin-top: 400px;
+    margin-top: 150px;
     flex-wrap: wrap;
     flex-direction: row;
     font-size: 24px;
@@ -859,7 +859,7 @@ textarea:focus::placeholder{
     font-style: normal;
   }
    #test2{
-    font-family: "Comic Sans MS", cursive, sans-serif !important;
+    font-family: Roboto;
     font-weight: normal;
     font-style: normal;
   }
